--- a/JEP467.md
+++ b/JEP467.md
@@ -1,5 +1,7 @@
 # JEP 467: Markdown Documentation Comments
 
+This is an abstract of the `JEP 467` to help LLMs generate modern Markdown Documentation Comments.
+
 The same javadoc comment can be written by expressing its structure and styling in Markdown, with no use of HTML and just a few JavaDoc inline tags. As an example of the use of Markdown in a documentation comment, consider the comment for java.lang.Object.hashCode:
 
 ```java
